@@ -1,7 +1,7 @@
 {
     "name": "OVN_Southbound",
-    "version": "2.8.2",
-    "cksum": "464326363 21916",
+    "version": "2.9.0",
+    "cksum": "2331743427 22311",
     "tables": {
         "SB_Global": {
             "columns": {
@@ -46,6 +46,15 @@
                                               "max": "unlimited"}}},
             "isRoot": true,
             "indexes": [["name"]]},
+        "Chassis_Private": {
+            "columns": {
+                "chassis_name": {"type": "string"},
+                "nb_cfg": {"type": {"key": "integer"}},
+                "external_ids": {
+                    "type": {"key": "string", "value": "string",
+                             "min": 0, "max": "unlimited"}}},
+            "isRoot": true,
+            "indexes": [["chassis_name"]]},
         "Encap": {
             "columns": {
                 "type": {"type": {"key": {
